--- a/code/assets/settings/AppSettings.json
+++ b/code/assets/settings/AppSettings.json
@@ -2,16 +2,16 @@
    {
       "key" : "windowSizeX",
       "type" : "int",
-      "value" : 2560
+      "value" : 1900
    },
    {
       "key" : "windowSizeY",
       "type" : "int",
-      "value" : 1440
+      "value" : 1000
    },
    {
       "key" : "isSimulation",
       "type" : "bool",
-      "value" : false
+      "value" : true
    }
 ]
