--- a/code/assets/settings/AppSettings.json
+++ b/code/assets/settings/AppSettings.json
@@ -5,13 +5,13 @@
       "value" : 1900
    },
    {
+      "key" : "isSimulation",
+      "type" : "bool",
+      "value" : false
+   },
+   {
       "key" : "windowSizeY",
       "type" : "int",
       "value" : 1000
-   },
-   {
-      "key" : "isSimulation",
-      "type" : "bool",
-      "value" : true
    }
 ]
