--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+Debug
+Release
+cmake-build-debug
+cmake-build-release
 
 *.cbp
 */cmake_install.cmake
