--- a/remote/CMakeLists.txt
+++ b/remote/CMakeLists.txt
@@ -22,5 +22,4 @@ ci_make_app(
         CINDER_PATH ${CINDER_PATH}
 
 )
-target_link_libraries(remote stdc++fs )
-
+target_link_libraries(remote stdc++fs lwiringPi)
