--- a/remote/CMakeLists.txt
+++ b/remote/CMakeLists.txt
@@ -22,4 +22,4 @@ ci_make_app(
         CINDER_PATH ${CINDER_PATH}
 
 )
-target_link_libraries(remote stdc++fs lwiringPi)
+target_link_libraries(remote stdc++fs wiringPi)
