--- a/robot/assets/settings/AppSettings.json
+++ b/robot/assets/settings/AppSettings.json
@@ -1,19 +1,17 @@
 [
    {
-
-      "key" : "windowSizeY",
+      "key" : "windowSizeX",
       "type" : "int",
-      "value" : 1000
+      "value" : 1900
    },
    {
       "key" : "isSimulation",
       "type" : "bool",
-      "value" : true
+      "value" : false
    },
    {
-      "key" : "windowSizeX",
+      "key" : "windowSizeY",
       "type" : "int",
-      "value" : 1900
-
+      "value" : 1000
    }
 ]
