--- a/robot/CMakeLists.txt
+++ b/robot/CMakeLists.txt
@@ -52,6 +52,8 @@ set(SRC_FILES
         ${APP_PATH}/src/balance/PID.cpp
         ${APP_PATH}/src/balance/BalanceController.cpp
         ${APP_PATH}/src/communication/OSCSender.cpp
+        ${APP_PATH}/src/communication/OSCReceiver.cpp
+        ${APP_PATH}/src/communication/Communication.cpp
         )
 
 ci_make_app(
