--- a/robot/assets/settings/AppSettings.json
+++ b/robot/assets/settings/AppSettings.json
@@ -1,17 +1,27 @@
 [
    {
+      "key" : "RemoteIP",
+      "type" : "string",
+      "value" : "192.168.4.14"
+   },
+   {
       "key" : "windowSizeY",
       "type" : "int",
       "value" : 1000
    },
    {
-      "key" : "isSimulation",
-      "type" : "bool",
-      "value" : false
+      "key" : "devRemoteIP",
+      "type" : "string",
+      "value" : "192.168.1.80"
    },
    {
       "key" : "windowSizeX",
       "type" : "int",
       "value" : 1500
+   },
+   {
+      "key" : "isSimulation",
+      "type" : "bool",
+      "value" : false
    }
 ]
