--- a/remote/CMakeLists.txt
+++ b/remote/CMakeLists.txt
@@ -14,6 +14,7 @@ include( "${CINDER_PATH}/proj/cmake/modules/cinderMakeApp.cmake" )
 
 set(SRC_FILES
         ${APP_PATH}/src/RemoteApp.cpp
+        ${APP_PATH}/src/gui/GuiSetup.cpp
         ${APP_PATH}/src/serialInput/RSerial.cpp
         ${APP_PATH}/src/communication/Communication.cpp
         ${APP_PATH}/src/communication/OSCReceiver.cpp
