--- a/robot/assets/settings/AppSettings.json
+++ b/robot/assets/settings/AppSettings.json
@@ -1,18 +1,8 @@
 [
    {
-      "key" : "isSimulation",
-      "type" : "bool",
-      "value" : true
-   },
-   {
-      "key" : "windowSizeX",
-      "type" : "int",
-      "value" : 1500
-   },
-   {
-      "key" : "devRemoteIP",
+      "key" : "RemoteIP",
       "type" : "string",
-      "value" : "192.168.1.80"
+      "value" : "192.168.4.14"
    },
    {
       "key" : "windowSizeY",
@@ -20,8 +10,18 @@
       "value" : 1000
    },
    {
-      "key" : "RemoteIP",
+      "key" : "devRemoteIP",
       "type" : "string",
-      "value" : "192.168.4.14"
+      "value" : "192.168.1.80"
+   },
+   {
+      "key" : "windowSizeX",
+      "type" : "int",
+      "value" : 1500
+   },
+   {
+      "key" : "isSimulation",
+      "type" : "bool",
+      "value" : false
    }
 ]
