--- a/robot/assets/settings/AppSettings.json
+++ b/robot/assets/settings/AppSettings.json
@@ -1,18 +1,13 @@
 [
    {
+      "key" : "RemoteIP",
+      "type" : "string",
+      "value" : "192.168.4.1"
+   },
+   {
       "key" : "isSimulation",
       "type" : "bool",
       "value" : false
-   },
-   {
-      "key" : "windowSizeX",
-      "type" : "int",
-      "value" : 1500
-   },
-   {
-      "key" : "devRemoteIP",
-      "type" : "string",
-      "value" : "192.168.1.80"
    },
    {
       "key" : "windowSizeY",
@@ -20,8 +15,18 @@
       "value" : 1000
    },
    {
-      "key" : "RemoteIP",
+      "key" : "sound",
+      "type" : "bool",
+      "value" : true
+   },
+   {
+      "key" : "devRemoteIP",
       "type" : "string",
-      "value" : "192.168.4.1"
+      "value" : "192.168.1.80"
+   },
+   {
+      "key" : "windowSizeX",
+      "type" : "int",
+      "value" : 1500
    }
 ]
