--- a/robot/assets/settings/RobotSettings.json
+++ b/robot/assets/settings/RobotSettings.json
@@ -1,5 +1,98 @@
 [
    {
+      "key" : "footRadius",
+      "type" : "float",
+      "value" : 20
+   },
+   {
+      "key" : "layDownTime",
+      "type" : "float",
+      "value" : 2
+   },
+   {
+      "key" : "standUpTime",
+      "type" : "float",
+      "value" : 3
+   },
+   {
+      "key" : "bodyX",
+      "type" : "float",
+      "value" : 30
+   },
+   {
+      "key" : "bodyWidth",
+      "type" : "float",
+      "value" : 120
+   },
+   {
+      "key" : "bodyLength",
+      "type" : "float",
+      "value" : 352
+   },
+   {
+      "key" : "bodyYStart",
+      "type" : "float",
+      "value" : 80
+   },
+   {
+      "key" : "hipOffsetX ",
+      "type" : "float",
+      "value" : 60
+   },
+   {
+      "key" : "bodyXStart",
+      "type" : "float",
+      "value" : -27
+   },
+   {
+      "key" : "hipCOM",
+      "type" : "vec3",
+      "value" : {
+         "x" : 50,
+         "y" : 0,
+         "z" : 0
+      }
+   },
+   {
+      "key" : "kneeMass",
+      "type" : "float",
+      "value" : 1.3300000000000001
+   },
+   {
+      "key" : "kneeCOM",
+      "type" : "vec3",
+      "value" : {
+         "x" : 0,
+         "y" : -120,
+         "z" : 0
+      }
+   },
+   {
+      "key" : "toeMass",
+      "type" : "float",
+      "value" : 0.082000000000000003
+   },
+   {
+      "key" : "hipMass",
+      "type" : "float",
+      "value" : 1
+   },
+   {
+      "key" : "hipOffsetZ",
+      "type" : "float",
+      "value" : 79
+   },
+   {
+      "key" : "bodyMass",
+      "type" : "float",
+      "value" : 6.5
+   },
+   {
+      "key" : "upperLegLength",
+      "type" : "float",
+      "value" : 210
+   },
+   {
       "key" : "footMass",
       "type" : "float",
       "value" : 0.28999999999999998
@@ -54,83 +147,5 @@
          "y" : 0,
          "z" : 0
       }
-   },
-   {
-      "key" : "bodyMass",
-      "type" : "float",
-      "value" : 6.5
-   },
-   {
-      "key" : "upperLegLength",
-      "type" : "float",
-      "value" : 210
-   },
-   {
-      "key" : "hipOffsetZ",
-      "type" : "float",
-      "value" : 79
-   },
-   {
-      "key" : "hipMass",
-      "type" : "float",
-      "value" : 1
-   },
-   {
-      "key" : "toeMass",
-      "type" : "float",
-      "value" : 0.082000000000000003
-   },
-   {
-      "key" : "kneeCOM",
-      "type" : "vec3",
-      "value" : {
-         "x" : 0,
-         "y" : -120,
-         "z" : 0
-      }
-   },
-   {
-      "key" : "kneeMass",
-      "type" : "float",
-      "value" : 1.3300000000000001
-   },
-   {
-      "key" : "hipCOM",
-      "type" : "vec3",
-      "value" : {
-         "x" : 50,
-         "y" : 0,
-         "z" : 0
-      }
-   },
-   {
-      "key" : "footRadius",
-      "type" : "float",
-      "value" : 20
-   },
-   {
-      "key" : "bodyXStart",
-      "type" : "float",
-      "value" : -27
-   },
-   {
-      "key" : "hipOffsetX ",
-      "type" : "float",
-      "value" : 60
-   },
-   {
-      "key" : "bodyYStart",
-      "type" : "float",
-      "value" : 80
-   },
-   {
-      "key" : "bodyLength",
-      "type" : "float",
-      "value" : 352
-   },
-   {
-      "key" : "bodyWidth",
-      "type" : "float",
-      "value" : 120
    }
 ]
